Fixed some spacings

--- a/css/common.css
+++ b/css/common.css
@@ -28,3 +28,10 @@ html {
 	display: block;
 	width: 100%;
 }
+
+.hide-text {
+	display: block;
+	text-indent: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+}
